--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <body onload="start();">
 	<canvas width="1920" height="1080" id="my_canvas" ></canvas>
 	<div>FPS: <span id="fps"></span></div>
+	<input type="file" onchange="loadFile(this.files[0])">
 </body>
 
 </html>
